<resources>
    <string name="app_name">Service Tip</string>
    <string name="service_question">How was the Service ?</string>
    <string name="option_twenty_percent">Amazing (20%)</string>
    <string name="option_eighteen_percent">Good (18%)</string>
    <string name="option_fifteen_percent">Okay (15%)</string>
    <string name="option_rounding_up">Round up tip ?</string>
    <string name="calculate_button">CALCULATE</string>
    <string name="tip_result">Tip Amount: %s</string>
</resources>